[2단계 - 블랙잭(베팅)] 렉스(오성원) 미션 제출합니다. (#311)
* fix: 공백의 이름이 들어왔을 때 정상 실행되는 오류 수정

- "rex,pobi,,,,,"의 입력을 하였을 때 정상 실행되는 오류를 수정
- 이름의 길이를 체크하는 메서드를 string.isEmpty()를 사용하도록 수정

* refactor: Game도메인 생성하여 컨트롤러가 Game과 View만 소통하도록 수정

- Game도메인에서는 User,Dealer객체를 반환하지 않고 가공된 값들만 반환하도록 설정

* refactor: HoldingCards에서 카드의 반환을 불변한 값으로 변경

- 해당 클래스는 addCard()가 있어 리스트가 불변하지 않다.
그래서 값의 안정성을 보장하기 위해 Collectors.unmodifiedList에서 List.copyOf로 변경하였다.

* refactor: 참가자가 카드가 아닌 덱을 받도록 수정

- 카드를 받으면 검증되지 않은 카드를 받아도 정상 실행될 수 있어,
카드가 아닌 덱을 받아 직접 뽑도록 수정

* test: 유저가 카드를 뽑을 때 카드가 아닌 덱을 받는 변경에 맞게 테스트 수정

- TestCardGenerator를 만들어 직접 생성한 덱을 테스트에 사용할 수 있도록 설정

* dosc: 배팅금액 기능 요구사항 추가

* refactor: Money객체 생성

- 투입 금액이 양의정수가 아닐 경우와 1000으로 나누어 떨어지지 않을 경우 예외 발생

* feat: 배팅 금액 입력 기능 구현

* refactor: 매직넘버를 상수로 변경

* feat: 배팅 금액과 게임 승패에 따른 수익률 계산 및 출력 구현

- 기존의 승패 출력 관련 DTO와 로직 제거
- 수익률 계산 및 출력 기능 구현 완료

* refactor: Users에서 딜러의 수익을 반환하는 것이 아닌 유저들의 총 수익을 반환하도록 수정

- 딜러의 수익은 Game에서 DTO를 생성할 때 -1을 곱하여 계산
- 매직넘버를 상수로 변환

* refactor: Money를 BetMoney로 이름 변경

- 일반적인 Money보다는 배팅 금액을 의미하는 것이 더 좋을 것 같아 변경

* test: 불필요한 테스트 제거, 중복 테스트 축소

- 중복된 코드의 반복으로 생성된 테스트를 @MethodSource를 활용해 코드 축소

* refactor: ResultTest의 테스트 메서드 이름을 올바르게 수정

* refactor: Result클래스에 중첩 클래스를 활용하여 상수 추가

* refactor: Dealer와 Users객체를 Participants 객체로 묶어서 관리하도록 수정

* refactor: Result클래스에서 상수 재사용하도록 수정

* feat: 블랙잭 판단 기능 구현 및 게임 상태들 생성

- HoldingCards에서 보유한 카드를 통해 블랙잭을 판단하는 기능 구현
- 상태 패턴 적용을 위해 유저의 상태들 생성
- 초기(Init)상태에 대한 카드 뽑기 기능 구현 및 테스트 완료

* refactor: Init State의 initDistribute기능을 drawCard로 이동

* refactor: 카드 합계 계산로직 수정

- ACE를 11로 계산 후 BUST발생 시 10을 빼가는 방법에서
ACE를 먼저 1로 계산 후 10씩 더하는 방식으로 수정

* refactor: State 상속 관계 추가 및 Participant가 State를 갖도록 구현

* refactor: Hit 상태의 drawCard메서드 구현, cards()메서드 네이밍 변경

- cards() -> holdingCards()

* feat: Stand상태로 가는 메서드 추가

- 카드를 더 뽑지 않고 차례를 마치는 스탠드 상태로 가는 메서드 추가

* refactor: 수익 계산 이전까지 전반적인 로직 통합 및 위치 조정

* refactor: State 인터페이스에 isBu